--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,138 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+
+*, *::before, *::after {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Raleway', sans-serif;
+  background-color:#F2D184;
+  color:#755515;
+  height:91vh;
+  align-items: center;
+  background-image: url(./components/Creativity-amico.svg);
+  background-size: 30vmin;
+  background-position: bottom;
+  background-repeat: no-repeat;
+}
+
+.container {
+  max-width: 500px;
+  margin: 150px auto 10px auto;
+  overflow: auto;
+  min-height: 300px;
+  border: 1px outset #faf0f1;
+  padding: 30px;
+  border-radius: 5px;
+  background-color: #EFCDCF;
+  box-shadow: 5px 5px 15px #F29BAB;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.header-title {
+  display: flex;
+  align-items: center;
+}
+
+.header h1{
+  margin-left:0.6em;
+}
+
+.btn {
+  display: inline-block;
+  background: #88C1C0;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.task {
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.task.reminder {
+  border-left: 5px solid #88C1C0;
+}
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.add-form {
+  margin-bottom: 40px;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+  margin-left:5px;
+  margin-bottom:5px
+}
+
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 12px;
+  font-size: 17px;
+  border-radius: 5px;
+  border: none;
+}
+
+.form-control-check {
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  /* flex: 2; */
+  height: 20px;
+  margin:0;
+  width:30px;
+}
+
+
+footer {
+  margin-top: 30px;
+  text-align: center;
 }
