--- a/src/index.css
+++ b/src/index.css
@@ -3,158 +3,165 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
-  background-color: #f2d184;
-  color: #755515;
-  height: 100vh;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+	font-family: 'Raleway', sans-serif;
+	background-color: #f2d184;
+	color: #755515;
+	height: 100vh;
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .amico {
-  display: block;
-  max-width: 70%;
-  margin: 30px auto 0;
+	display: block;
+	max-width: 70%;
+	margin: 30px auto 0;
 }
 
 .container {
-  max-width: 500px;
-  margin: 0 auto;
-  overflow: auto;
-  min-height: 300px;
-  border: 1px outset #faf0f1;
-  padding: 30px;
-  border-radius: 5px;
-  background-color: #efcdcf;
-  box-shadow: 5px 5px 15px #f29bab;
+	margin-top: 600px !important;
+	max-width: 500px;
+	margin: 0 auto;
+	overflow: auto;
+	min-height: 300px;
+	border: 1px outset #faf0f1;
+	padding: 30px;
+	border-radius: 5px;
+	background-color: #efcdcf;
+	box-shadow: 5px 5px 15px #f29bab;
+}
+
+.d-flex-column {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 20px;
 }
 
 .header-title {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .header h1 {
-  margin-left: 0.6em;
+	margin-left: 0.6em;
 }
 
 .btn {
-  display: inline-block;
-  background: #88c1c0;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  margin: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: inherit;
+	display: inline-block;
+	background: #88c1c0;
+	color: #fff;
+	border: none;
+	padding: 10px 20px;
+	margin: 5px;
+	border-radius: 5px;
+	cursor: pointer;
+	text-decoration: none;
+	font-size: 15px;
+	font-family: inherit;
 }
 
 .btn:focus {
-  outline: none;
+	outline: none;
 }
 
 .btn:active {
-  transform: scale(0.98);
+	transform: scale(0.98);
 }
 
 .btn-block {
-  display: block;
-  width: 100%;
+	display: block;
+	width: 100%;
 }
 
 .task {
-  background: #f4f4f4;
-  margin: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
+	background: #f4f4f4;
+	margin: 5px;
+	padding: 10px 20px;
+	cursor: pointer;
 }
 
 .task.reminder {
-  border-left: 5px solid #88c1c0;
+	border-left: 5px solid #88c1c0;
 }
 
 .task h3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .add-form {
-  margin-bottom: 40px;
+	margin-bottom: 40px;
 }
 
 .form-control {
-  margin: 20px 0;
+	margin: 20px 0;
 }
 
 .form-control label {
-  display: block;
-  margin-left: 5px;
-  margin-bottom: 5px;
+	display: block;
+	margin-left: 5px;
+	margin-bottom: 5px;
 }
 
 .form-control input {
-  width: 100%;
-  height: 40px;
-  margin: 5px;
-  padding: 3px 12px;
-  font-size: 17px;
-  border-radius: 5px;
-  border: none;
+	width: 100%;
+	height: 40px;
+	margin: 5px;
+	padding: 3px 12px;
+	font-size: 17px;
+	border-radius: 5px;
+	border: none;
 }
 
 .form-control-check {
-  display: flex;
-  align-items: center;
-  /* justify-content: space-between; */
+	display: flex;
+	align-items: center;
+	/* justify-content: space-between; */
 }
 
 .form-control-check label {
-  flex: 1;
+	flex: 1;
 }
 
 .form-control-check input {
-  /* flex: 2; */
-  height: 20px;
-  margin: 0;
-  width: 30px;
+	/* flex: 2; */
+	height: 20px;
+	margin: 0;
+	width: 30px;
 }
 
 footer {
-  margin-top: 30px;
-  text-align: center;
+	margin-top: 30px;
+	text-align: center;
 }
 
 .footerInfo {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .footerInfoTitle {
-  margin-bottom: 10px;
-  font-weight: 600;
+	margin-bottom: 10px;
+	font-weight: 600;
 }
 
 .footerInfoContent {
-  font-weight: 400;
-  text-align: left;
-  margin: 0 auto;
-  width: 72%;
+	font-weight: 400;
+	text-align: left;
+	margin: 0 auto;
+	width: 72%;
 }
